Complete regression models

--- a/Regression.ipynb
+++ b/Regression.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "17db52c7",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "550e66a7",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "6e43d6d9",
    "metadata": {},
    "outputs": [
@@ -649,7 +649,7 @@
        "[229 rows x 13 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ef733536",
+   "execution_count": 6,
+   "id": "9b65060c",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
        "(2385, 13)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,8 +686,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f21ed0b9",
+   "execution_count": 7,
+   "id": "64874d45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "649b1def",
    "metadata": {},
    "outputs": [
@@ -729,8 +729,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ece40dcf",
+   "execution_count": 9,
+   "id": "d9d92bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "e36d1b2a",
    "metadata": {},
    "outputs": [
@@ -748,7 +748,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rsquared of the model is:0.7360141405427469\n"
+      "Rsquared of the Linear Regression model is: 0.7360141405427469\n"
      ]
     }
    ],
@@ -757,12 +757,12 @@
     "model1=LinearRegression()\n",
     "model1.fit(X_train,Y_train)\n",
     "Y_pred = model1.predict(X_test)\n",
-    "print('Rsquared of the model is:'+ str(r2_score(Y_pred,Y_test)))\n"
+    "print('Rsquared of the Linear Regression model is: '+ str(r2_score(Y_pred,Y_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "6e645e3b",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 squared of Random forest is:0.8154755991047948\n"
+      "R2 squared of the Random forest model is:0.8154562187061573\n"
      ]
     }
    ],
@@ -779,23 +779,19 @@
     "model2 = RandomForestRegressor(n_estimators=20, random_state=0)\n",
     "model2.fit(X_train, np.ravel(Y_train, order='c'))\n",
     "Y_pred2=model2.predict(X_test)\n",
-    "print('R2 squared of Random forest is:' +str(r2_score(Y_pred2,Y_test)))\n"
+    "print('R2 squared of the Random forest model is:' +str(r2_score(Y_pred2,Y_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5e26b68b",
+   "execution_count": 12,
+   "id": "d7b21ff6",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  estimator.fit(X_train, y_train, **fit_params)\n",
-      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  estimator.fit(X_train, y_train, **fit_params)\n",
       "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
       "  estimator.fit(X_train, y_train, **fit_params)\n",
       "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
@@ -808,8 +804,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.6807323  0.79786123 0.85733747 0.95425591 0.87612518]\n",
-      "Mean 5-Fold R Squared: 0.8332624177903938\n"
+      "[0.6789072  0.79779563 0.85732579 0.95426985 0.87615102]\n",
+      "Mean 5-Fold R Squared of the Random Forest model is: 0.8328898966127319\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n",
+      "/opt/anaconda3/lib/python3.8/site-packages/sklearn/model_selection/_validation.py:593: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  estimator.fit(X_train, y_train, **fit_params)\n"
      ]
     }
    ],
@@ -818,12 +824,12 @@
     "model2cv=RandomForestRegressor(n_estimators=20,random_state=0)\n",
     "cv_r2_scores_rf = cross_val_score(model2cv, X, Y, cv=5,scoring='r2')\n",
     "print(cv_r2_scores_rf)\n",
-    "print(\"Mean 5-Fold R Squared: {}\".format(np.mean(cv_r2_scores_rf)))\n"
+    "print(\"Mean 5-Fold R Squared of the Random Forest model is: {}\".format(np.mean(cv_r2_scores_rf)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "c2d6b423",
    "metadata": {},
    "outputs": [
@@ -831,7 +837,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Rsquared of the XGBoost model is:0.8119881157925052\n"
+      "The Rsquared of the XGBoost model is: 0.8119881157925052\n"
      ]
     }
    ],
@@ -840,12 +846,12 @@
     "model3=XGBRegressor()\n",
     "model3.fit(X_train,Y_train)\n",
     "Y_pred3= model3.predict(X_test)\n",
-    "print('The Rsquared of the XGBoost model is:'+ str(r2_score(Y_pred3,Y_test)))\n"
+    "print('The Rsquared of the XGBoost model is: '+ str(r2_score(Y_pred3,Y_test)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "5f0108c2",
    "metadata": {},
    "outputs": [
@@ -854,7 +860,7 @@
      "output_type": "stream",
      "text": [
       "[0.63207088 0.81876946 0.96631497 0.8253021  0.80868067]\n",
-      "Mean 5-Fold R Squared: 0.8102276182949104\n"
+      "Mean 5-Fold R Squared of the XGBoost model is: 0.8102276182949104\n"
      ]
     }
    ],
@@ -863,7 +869,7 @@
     "model3cv=XGBRegressor()\n",
     "cv_r2_scores_rf = cross_val_score(model3cv, X, Y, cv=5,scoring='r2')\n",
     "print(cv_r2_scores_rf)\n",
-    "print(\"Mean 5-Fold R Squared: {}\".format(np.mean(cv_r2_scores_rf)))"
+    "print(\"Mean 5-Fold R Squared of the XGBoost model is: {}\".format(np.mean(cv_r2_scores_rf)))"
    ]
   }
  ],
