--- a/Part_2_project.ipynb
+++ b/Part_2_project.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9f5bfff3",
    "metadata": {},
@@ -547,19 +546,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "550e66a7",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-79349a22c944>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Checking for null values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mMVpercentages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMVpercentages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aired_to      0.320259\n",
+      "rank          0.087205\n",
+      "Storyline     0.007616\n",
+      "score         0.004570\n",
+      "scored_by     0.004570\n",
+      "episodes      0.002285\n",
+      "anime_name    0.000000\n",
+      "anime_id      0.000000\n",
+      "type          0.000000\n",
+      "popularity    0.000000\n",
+      "dtype: float64\n"
      ]
     }
    ],
@@ -571,20 +576,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6e43d6d9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-787aedeb5f12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Looking for instances with null values in the rank column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mNaN_rows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'rank'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mNaN_rows\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>anime_name</th>\n",
+       "      <th>anime_id</th>\n",
+       "      <th>type</th>\n",
+       "      <th>episodes</th>\n",
+       "      <th>score</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>scored_by</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>aired_from</th>\n",
+       "      <th>aired_to</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>Storyline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>Gosenzo San'e</td>\n",
+       "      <td>188</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>6.09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8788</td>\n",
+       "      <td>818.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1998-09-25T00:00:00+00:00</td>\n",
+       "      <td>1999-03-25T00:00:00+00:00</td>\n",
+       "      <td>30 min per ep</td>\n",
+       "      <td>Masquerade is the story surrounding the Hiraga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>Words Worth</td>\n",
+       "      <td>203</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5841</td>\n",
+       "      <td>3266.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1999-08-25T00:00:00+00:00</td>\n",
+       "      <td>2000-11-25T00:00:00+00:00</td>\n",
+       "      <td>28 min per ep</td>\n",
+       "      <td>The legend has survived for generation. The Wo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>Pure Mail</td>\n",
+       "      <td>211</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8113</td>\n",
+       "      <td>1284.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2001-09-25T00:00:00+00:00</td>\n",
+       "      <td>2001-12-21T00:00:00+00:00</td>\n",
+       "      <td>29 min per ep</td>\n",
+       "      <td>Episode 1: \"There is no need for relationships...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>187</th>\n",
+       "      <td>Pia Carrot e Youkoso!!</td>\n",
+       "      <td>213</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8180</td>\n",
+       "      <td>1132.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1997-10-24T00:00:00+00:00</td>\n",
+       "      <td>1998-04-24T00:00:00+00:00</td>\n",
+       "      <td>27 min per ep</td>\n",
+       "      <td>Yusuke Kinoshita is forced by his father to wo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>Pia Carrot e Youkoso!! 2</td>\n",
+       "      <td>214</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9151</td>\n",
+       "      <td>804.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1998-10-23T00:00:00+00:00</td>\n",
+       "      <td>1999-04-23T00:00:00+00:00</td>\n",
+       "      <td>28 min per ep</td>\n",
+       "      <td>Yusuke (from the first Pia Carrot series) retu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2612</th>\n",
+       "      <td>Yuuwaku</td>\n",
+       "      <td>2982</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6613</td>\n",
+       "      <td>2074.0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2003-07-25T00:00:00+00:00</td>\n",
+       "      <td>2003-10-31T00:00:00+00:00</td>\n",
+       "      <td>30 min per ep</td>\n",
+       "      <td>Unable to resist his animal urges, a professor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2617</th>\n",
+       "      <td>Mahou Shoujo Ai</td>\n",
+       "      <td>2988</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.52</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5852</td>\n",
+       "      <td>2595.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2003-08-25T00:00:00+00:00</td>\n",
+       "      <td>2005-02-25T00:00:00+00:00</td>\n",
+       "      <td>27 min per ep</td>\n",
+       "      <td>In a certain town, there were consecutive phan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2618</th>\n",
+       "      <td>Classmate no Okaasan</td>\n",
+       "      <td>2989</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6.01</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6836</td>\n",
+       "      <td>1826.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2007-04-13T00:00:00+00:00</td>\n",
+       "      <td>2007-07-13T00:00:00+00:00</td>\n",
+       "      <td>28 min per ep</td>\n",
+       "      <td>Jun is in his second year of high school. He l...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2619</th>\n",
+       "      <td>Mini Skirt Gakuen</td>\n",
+       "      <td>2990</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10279</td>\n",
+       "      <td>509.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2001-12-21T00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19 min</td>\n",
+       "      <td>Under the uniforms of this girls volleyball te...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2620</th>\n",
+       "      <td>Harumi-chan no Oita</td>\n",
+       "      <td>2991</td>\n",
+       "      <td>OVA</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.19</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8489</td>\n",
+       "      <td>1176.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2001-03-16T00:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23 min</td>\n",
+       "      <td>Wafaru is a guy next door. One day he saw a li...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>229 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    anime_name  anime_id type  episodes  score  rank  \\\n",
+       "163              Gosenzo San'e       188  OVA       4.0   6.09   NaN   \n",
+       "178                Words Worth       203  OVA       5.0   6.75   NaN   \n",
+       "185                  Pure Mail       211  OVA       2.0   6.24   NaN   \n",
+       "187     Pia Carrot e Youkoso!!       213  OVA       3.0   6.00   NaN   \n",
+       "188   Pia Carrot e Youkoso!! 2       214  OVA       3.0   6.12   NaN   \n",
+       "...                        ...       ...  ...       ...    ...   ...   \n",
+       "2612                   Yuuwaku      2982  OVA       2.0   6.51   NaN   \n",
+       "2617           Mahou Shoujo Ai      2988  OVA       5.0   6.52   NaN   \n",
+       "2618      Classmate no Okaasan      2989  OVA       2.0   6.01   NaN   \n",
+       "2619         Mini Skirt Gakuen      2990  OVA       1.0   4.43   NaN   \n",
+       "2620       Harumi-chan no Oita      2991  OVA       1.0   5.19   NaN   \n",
+       "\n",
+       "      popularity  scored_by  likes                 aired_from  \\\n",
+       "163         8788      818.0      5  1998-09-25T00:00:00+00:00   \n",
+       "178         5841     3266.0     31  1999-08-25T00:00:00+00:00   \n",
+       "185         8113     1284.0     13  2001-09-25T00:00:00+00:00   \n",
+       "187         8180     1132.0      5  1997-10-24T00:00:00+00:00   \n",
+       "188         9151      804.0      5  1998-10-23T00:00:00+00:00   \n",
+       "...          ...        ...    ...                        ...   \n",
+       "2612        6613     2074.0     23  2003-07-25T00:00:00+00:00   \n",
+       "2617        5852     2595.0     31  2003-08-25T00:00:00+00:00   \n",
+       "2618        6836     1826.0     11  2007-04-13T00:00:00+00:00   \n",
+       "2619       10279      509.0      3  2001-12-21T00:00:00+00:00   \n",
+       "2620        8489     1176.0      6  2001-03-16T00:00:00+00:00   \n",
+       "\n",
+       "                       aired_to       duration  \\\n",
+       "163   1999-03-25T00:00:00+00:00  30 min per ep   \n",
+       "178   2000-11-25T00:00:00+00:00  28 min per ep   \n",
+       "185   2001-12-21T00:00:00+00:00  29 min per ep   \n",
+       "187   1998-04-24T00:00:00+00:00  27 min per ep   \n",
+       "188   1999-04-23T00:00:00+00:00  28 min per ep   \n",
+       "...                         ...            ...   \n",
+       "2612  2003-10-31T00:00:00+00:00  30 min per ep   \n",
+       "2617  2005-02-25T00:00:00+00:00  27 min per ep   \n",
+       "2618  2007-07-13T00:00:00+00:00  28 min per ep   \n",
+       "2619                        NaN         19 min   \n",
+       "2620                        NaN         23 min   \n",
+       "\n",
+       "                                              Storyline  \n",
+       "163   Masquerade is the story surrounding the Hiraga...  \n",
+       "178   The legend has survived for generation. The Wo...  \n",
+       "185   Episode 1: \"There is no need for relationships...  \n",
+       "187   Yusuke Kinoshita is forced by his father to wo...  \n",
+       "188   Yusuke (from the first Pia Carrot series) retu...  \n",
+       "...                                                 ...  \n",
+       "2612  Unable to resist his animal urges, a professor...  \n",
+       "2617  In a certain town, there were consecutive phan...  \n",
+       "2618  Jun is in his second year of high school. He l...  \n",
+       "2619  Under the uniforms of this girls volleyball te...  \n",
+       "2620  Wafaru is a guy next door. One day he saw a li...  \n",
+       "\n",
+       "[229 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -648,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "17db52c7",
    "metadata": {},
    "outputs": [
@@ -673,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "649b1def",
    "metadata": {},
    "outputs": [
@@ -758,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "036e6549",
    "metadata": {},
    "outputs": [
@@ -767,7 +1039,7 @@
      "output_type": "stream",
      "text": [
       "[0.6205846  0.6228268  0.91573444 0.81672103 0.71668522]\n",
-      "Mean 5-Fold R Squared of the Random Forest model is: 0.7385104179109478\n"
+      "Mean 5-Fold R Squared of the Random Forest model is: 0.738510417910948\n"
      ]
     }
    ],
@@ -790,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "6e645e3b",
    "metadata": {},
    "outputs": [
@@ -812,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "835be8f2",
    "metadata": {
     "scrolled": true
@@ -861,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c2d6b423",
    "metadata": {},
    "outputs": [
@@ -883,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "5f0108c2",
    "metadata": {},
    "outputs": [
@@ -902,6 +1174,14 @@
     "cv_r2_scores_rf = cross_val_score(model3cv, X, Y, cv=5,scoring='r2')\n",
     "print(cv_r2_scores_rf)\n",
     "print(\"Mean 5-Fold R Squared of the XGBoost model is: {}\".format(np.mean(cv_r2_scores_rf)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9726300f",
+   "metadata": {},
+   "source": [
+    "What appears from the results is that the linear model is outperformed by random forest and XGboost, but this is quite normal since the main characteristic of a linear model is not the accuracy of the model but its interpretability. However the accuracy of the three models seems to be good and could be improved by better tuning the hyperparameters of the two ensemble learning models maybe through a grid search."
    ]
   }
  ],
