Update and rename Part_2_project.ipynb to Task 2 Python - Analysis on anime dataset.ipynb

--- a/Task 2 Python - Analysis on anime dataset.ipynb
+++ b/Task 2 Python - Analysis on anime dataset.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Importing libraries \n",
-    "For the second part of the project, we had to mainpulate,visualize and analyze the dataset from the previous task. In order to do this,we imported the library needed for data visualization (matplotlib and seaborn),manipulation (numpy and pandas) and analysis (sklearn and XGBoost)"
+    "For the second part of the project, we had to mainpulate, visualize and analyze the dataset from the previous task. In order to do this, we imported the library needed for data visualization (matplotlib and seaborn), manipulation (numpy and pandas) and analysis (sklearn and XGBoost)."
    ]
   },
   {
@@ -339,7 +339,7 @@
    "metadata": {},
    "source": [
     "# Data Visualization \n",
-    "The first plot we decided to make was a scatterplot aimed at understanding the correlation between the attribute rank and the attribute score and what came out, as can be noticed below, is that there is a negative correlation o 0.97 among the two variables which lets us deduce the fact that as the score of anime go up its rank will get closer to the top of the anime list."
+    "The first plot we decided to make was a scatterplot aimed at understanding the correlation between the attribute 'rank' and the attribute 'score'. What came out, as can be noticed below, is that there is a negative correlation of 0.97 among the two variables, which lets us deduce the fact that as the score of anime goes up its rank will get closer to the top of the anime list."
    ]
   },
   {
@@ -381,7 +381,7 @@
    "id": "9c04a694",
    "metadata": {},
    "source": [
-    "Successively we plotted the number likes against the popularity of the anime(expressed in numbers) and against the number of people who voted them in the Myanimelist. What came out is the fact that,apart from a few high leverage points most of the animes present a number of likes in the range between 0 and 40000. Another thing that it is possible to eyeball is the fact that animes with the least number of likes appear to be the ones with the highest the popularity, which is a paradox, and are also the ones which have been morev rated by  people."
+    "Successively, we plotted the number of likes against the popularity of the anime (expressed in numbers) and against the number of people who voted them in the Myanimelist. What came out is the fact that, apart from a few high leverage points, most of the animes present a number of likes in the range between 0 and 40000. Another thing that it is possible to eyeball is the fact that animes with the least number of likes appear to be the ones with the highest popularity, which is a paradox, and are also the ones which have been more rated by people."
    ]
   },
   {
@@ -446,7 +446,7 @@
    "id": "5d1f8025",
    "metadata": {},
    "source": [
-    "Later we plotted the number of proportion of each typology of format of anime in a pie chart and clearly the most prevalent types of animes are OVAs and TV which represents TV series."
+    "Later, we plotted the proportions of each typology of anime's format in a pie chart and clearly, the most prevalent types of animes are OVAs and TV which represents TV series."
    ]
   },
   {
@@ -494,7 +494,7 @@
    "id": "9b9a63f5",
    "metadata": {},
    "source": [
-    "Finally we plotted the average number of episodes as a grouped mean for each typology of anime format. Apart from TV series which obviously have the highest number of episodes, the second with the highest number of splits in storytelling are ONAs. "
+    "Finally, we plotted the average number of episodes as a grouped mean for each typology of anime format. Apart from TV series, which obviously have the highest number of episodes, the second with the highest number of splits in storytelling are ONAs. "
    ]
   },
   {
@@ -541,7 +541,7 @@
    "source": [
     "# Regression models \n",
     "\n",
-    "In order to provide something meaningful and useful we decided to build different ML models to predict the number of likes given three predictors ('scored_by','rank' and 'score'). Before doing this we had to clean up and preprocess the data a little. Firstly we checked for missing values for all the predictors and then decided to delete the instances with null values for what concerns the predictors we were interested in. "
+    "In order to provide something meaningful and useful, we decided to build different ML models to predict the number of likes given three predictors ('scored_by', 'rank' and 'score'). Before doing this we had to clean up and preprocess the data a little. Firstly, we checked for missing values for all the predictors and then we decided to delete the instances with null values for what concerns the predictors we were interested in. "
    ]
   },
   {
@@ -894,7 +894,7 @@
    "id": "ebbcbd5e",
    "metadata": {},
    "source": [
-    "Later on we had to create our predictor matrix and response vector and we also had to reshape Y with numpy in order to transform it into an array."
+    "Later on, we had to create our predictor matrix and response vector and we also had to reshape Y with numpy in order to transform it into an array."
    ]
   },
   {
@@ -915,7 +915,7 @@
    "id": "788d2c04",
    "metadata": {},
    "source": [
-    "We then plotted the distribution of Y for testing the normality assumptions necessary for the linear model and it appeared to have a non-normal distribution so we scaled it  "
+    "We then plotted the distribution of Y for testing the normality assumptions necessary for the linear model and it appeared to have a non-normal distribution so we scaled it.  "
    ]
   },
   {
@@ -976,7 +976,7 @@
    "id": "2f83b9c8",
    "metadata": {},
    "source": [
-    "In the last part of our data manipulation and preprocessing we performed a train-test split by using 75% of our dataset for training the models and the remaining part to test them"
+    "In the last part of our data manipulation and preprocessing we performed a train-test split by using 75% of our dataset for training the models and the remaining part to test them."
    ]
   },
   {
@@ -995,7 +995,7 @@
    "id": "52053280",
    "metadata": {},
    "source": [
-    "We basically built three regression models(A linear regression model, a random forest and Boosting model) and for each one of them we computed the Rsquared on the test set according to the previous train-test split and the ,in addition, we copmuted the Mean R squared among the folds of a 5-fold cross validation. Before choosing the number of folds we made many attempts but, even increasing the number of folds to 10/20, the accuracy didn't really increase that much so we decided to stick with 5 folds."
+    "We basically built three regression models (a linear regression model, a Random Forest and a Boosting model) and, for each one of them, we computed the Rsquared on the test set according to the previous train-test split and, in addition, we copmuted the Mean R squared among the folds of a 5-fold cross validation. Before choosing the number of folds we made many attempts but, even increasing the number of folds to 10/20, the accuracy didn't really increase that much so we decided to stick with 5 folds."
    ]
   },
   {
@@ -1181,9 +1181,7 @@
    "id": "9726300f",
    "metadata": {},
    "source": [
-    "What appears from the results is that the linear model is outperformed by random forest and XGboost, but this is quite normal since the main characteristic of a linear model is not the accuracy of the model but its interpretability. However the accuracy of the three models seems to be good and could be improved by better tuning the hyperparameters of the two ensemble learning models maybe through a grid search."
-   ]
-  }
+    "What appears from the results is that the linear model is outperformed if compared with Random Forest and XGboost, but this is quite normal since the main characteristic of a linear model is not the accuracy of the model but its interpretability. However, the accuracy of the three models seems to be good and could be improved by better tuning the hyperparameters of the two ensemble learning models, for instance through a grid search."
  ],
  "metadata": {
   "kernelspec": {
